--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a class="nav-link">Consoles</a></li>
                     <li><a class="nav-link">Acessórios</a></li>
                     <li><a class="nav-link">Controles</a></li>
-                    <li><a class="nav-link">Outros</a></li>
+                    <li><a class="nav-link">Personalizar</a></li>
                 </ul>
             </nav>
         </header>
