--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h4>Wireless Controller for Playstation</h4>
                 <p>Controle Original</p>
                 <h5>R$ 222,50</h5>
-                <button class="buy-now">Comprar Agora</button>
+                <button class="buy-now">Comprar Agora <img src="./assets/arrow.png" alt="seta"></button>
             </div>
 
             <div class="container-right">
@@ -66,7 +66,6 @@
     }
    }
     
-
 </script>
 
 </html>
